--- a/locale/fof-drafts.yml
+++ b/locale/fof-drafts.yml
@@ -6,7 +6,9 @@ fof-drafts:
     composer:
       title: Sačuvaj skicu
       alert: Skica sačuvana.
+      exit_alert: Odbaciti promjene na skici?
     dropdown:
+      empty_text: Niste spremili nijednu skicu
       title: Skice
       button: Obriši skicu
       tooltip: => fof-drafts.forum.dropdown.title
