--- a/locale/fof-masquerade.yml
+++ b/locale/fof-masquerade.yml
@@ -51,11 +51,11 @@ fof-masquerade:
                 Shows an icon in front of values entered by the user. For a reference of
                 available icons, check the <a>FontAwesome website</a>. Use icon names with
                 the "fa-" prefix, like "fas fa-info".
-            force-user-to-completion: Force user to complete profile
-            disable-user-bio: Disable user bio field
-            options: Options
-            option-new: New option
-            option-coma-warning: The label of an option cannot contain any coma (",").
+            force-user-to-completion: Prisilite korisnika da dovrši profil
+            disable-user-bio: Onemogući korisničko bio polje
+            options: Opcije
+            option-new: Nova opcija
+            option-coma-warning: Oznaka opcije ne može sadržavati zarez (",").
         types:
             advanced: Napredno
             boolean: Checkbox
