--- a/locale/reflar-twofactor.yml
+++ b/locale/reflar-twofactor.yml
@@ -1,9 +1,9 @@
 reflar-twofactor:
   forum:
-    text: "Your {forum} verification code is: {code}"
-    onetouch:  "Request to login to {forum}"
+    text: "Vaš {forum} verifikacijski kod je: {code}"
+    onetouch:  "Zahtjev za prijavu na {forum}"
     accountlabel: Two Factor
-    incorrect_2fa: Invalid verification code
+    incorrect_2fa: Nevažeći verifikacijski kod
     2fa_disabled: Two factor authentication successfully disabled.
     2fa_enabled: Two factor authentication successfully enabled
     email:
