--- a/locale/fof-share-social.yml
+++ b/locale/fof-share-social.yml
@@ -20,3 +20,5 @@ fof-share-social:
       vkontakte: VKontakte
       odnoklassniki: Odnoklassniki
       my_mail: My World
+      qq: QQ
+      qzone: QZone
