--- a/locale/fof-pages.yml
+++ b/locale/fof-pages.yml
@@ -1,19 +1,12 @@
 fof-pages:
-
-  ##
-  # UNIQUE KEYS - The following keys are used in only one location each.
-  ##
-
-  # Translations in this namespace are used by the admin interface.
   admin:
-
-    # These strings are used in the Edit Page modal dialog.
     edit_page:
       content_label: => fof-pages.ref.content
       content_placeholder: => fof-pages.ref.content
       delete_page_button: Obriši stranicu
       delete_page_confirmation: "Jeste li sigurni da želite izbrisati ovu stranicu??"
       hidden_label: Sačuvaj kao skicu
+      restricted_label: Ograniči pristup (konfigurirajte tko može pristupiti na kartici Dozvole)
       html_label: Uključi Html
       set_as_home_page_confirmation: "Jeste li sigurni da ovu stranicu želite postaviti kao svoju početnu stranicu?"
       slug_label: => fof-pages.ref.slug
@@ -24,23 +17,21 @@ fof-pages:
       title_placeholder: => fof-pages.ref.title
       url_label: => fof-pages.ref.url
       url_placeholder: => fof-pages.ref.url
-
-    # These strings are used in the pages page.
     nav:
       pages_button: => fof-pages.ref.pages
       pages_text: Stvorite prilagođene statičke stranice.
-
-    # Strings in this namespace are referenced by two or more unique keys.
     pages:
       about_text: Stvarajte i upravljajte sa statičkim stranicama.
       create_button: => fof-pages.ref.create_page
-
-    # These strings are used in the pages list.
     pages_list:
       empty_text: Izgleda da ovdje nema stranica.
       title: => fof-pages.ref.title
+    permissions:
+      restricted: Pogledajte ograničene stranice
+    badges:
+      hidden: Skica
+      restricted: Ograničeno
 
-  # These strings are used in the navigation bar.
   ref:
     content: Sadržaj
     create_page: Kreiraj stranicu
