--- a/locale/clarkwinkelmann-who-read.yml
+++ b/locale/clarkwinkelmann-who-read.yml
@@ -1,44 +1,44 @@
 clarkwinkelmann-who-read:
     forum:
         tooltip:
-            last-read-at: "{username} pročitao/la {ago}"
-            last-read-at-behind: "{username} last read {ago} and is behind"
-            last-read-at-up-to-date: "{username} read the last post {ago}"
+            last-read-at: "{username} čitao/la {ago}"
+            last-read-at-behind: "{username} zadnje čitao/la {ago} i nije u toku"
+            last-read-at-up-to-date: "{username} je pročitao/la zadnju objavu {ago}"
         more:
-            show: Show {count} more
-            info: And {count} more
+            show: Prikaži {count} više
+            info: Još {count} više
         footer:
-            read-this-post: "{0} Nobody read this post|{1} One user read this post|]1,Inf] {count} users read this post"
-            read-no-further: "{0} Everybody read further|{1} One user did not read further|]1,Inf] {count} did not read further"
-            read-to-end: "{0} Nobody read to the end|{1} One user read to the end|]1,Inf] {count} users read to the end"
+            read-this-post: "{0} Nitko nije čitao ovaj post|{1} Jedan je korisnik pročitao ovaj post|]1,Inf] {count} korisnika je pročitalo ovaj post"
+            read-no-further: "{0} Svi su proćitali dalje|{1} Jedan korisnik nije čitao dalje|]1,Inf] {count} nije čitalo dalje"
+            read-to-end: "{0} Niko nije pročitao do kraja|{1} Jedan korisnik je pročitao do kraja|]1,Inf] {count} korisnika je pročitalo do kraja"
         controls:
-            set-unread: Mark unread
-            remove-unread: Remove unread
+            set-unread: Označi nepročitano
+            remove-unread: Ukloni nepročitano
         badges:
             following: => flarum-subscriptions.forum.badge.following_tooltip
             ignoring: => flarum-subscriptions.forum.badge.ignoring_tooltip
-            unread: Marked as unread
+            unread: Označeno kao nepročitano
         modal:
-            title: Readers
-            up-to-this-post: Users who read up to this post
-            past-this-post: Users who read past this post
-            to-the-end: Users who read to the end
-            behind: Users who did not read to the end
+            title: Čitatelji
+            up-to-this-post: Korisnici koji su pročitali ovaj post
+            past-this-post: Korisnici koji su čitali ovaj post
+            to-the-end: Korisnici koji čitaju do kraja
+            behind: Korisnici koji nisu pročitali do kraja
 
     admin:
         permissions:
-            heading: Who read
-            see-read: See read status
-            see-subscription: See subscription status
-            see-unread: See unread status of other users
-            mark-unread: Mark discussions as unread for own user
+            heading: Ko čita
+            see-read: Pogledati stats čitatelja
+            see-subscription: Pogledati status pretplate
+            see-unread: Pogledati status nepročitano drugih korisnika
+            mark-unread: Označi rasprave kao nepročitane za vlastitog korisnika
         settings:
-            title: Who read postavke
-            show-in-discussion-list: Show readers in discussion list
-            show-in-hero: Show readers in discussion hero
-            show-between-posts: Show read status between posts
-            show-count-of-readers-who-stopped: Show the number of users who stopped reading instead of total read between posts
-            hide-when-behind: Hide a user completely if they are behind that many posts
-            max-visible: Maximum number of users to show before "read more"
-            unread-icon: Icon for the unread badge
-            only-groups: Only show read status of users belonging to those groups
+            title: Ko čita postavke
+            show-in-discussion-list: Pokažite čitatelje na popisu diskusija
+            show-in-hero: Pokažite čitatelje u diskusijama (hero)
+            show-between-posts: Prikaži status čitanja između postova
+            show-count-of-readers-who-stopped: Prikažite broj korisnika koji su prestali čitati umjesto ukupnog čitanja između postova
+            hide-when-behind: U potpunosti sakrijte korisnika ako stoji iza tolikih postova
+            max-visible: Maksimalni broj korisnika za prikazivanje prije "pročitajte više"
+            unread-icon: Ikona za nepročitanu značku
+            only-groups: Prikaži samo status čitanja korisnika koji pripadaju tim skupinama
