--- a/locale/clarkwinkelmann-who-read.yml
+++ b/locale/clarkwinkelmann-who-read.yml
@@ -22,7 +22,7 @@ clarkwinkelmann-who-read:
             title: Čitatelji
             up-to-this-post: Korisnici koji su pročitali ovaj post
             past-this-post: Korisnici koji su čitali ovaj post
-            to-the-end: Korisnici koji čitaju do kraja
+            to-the-end: Korisnici koji su čitali do kraja
             behind: Korisnici koji nisu pročitali do kraja
 
     admin:
