--- a/locale/therealsujitk-flarum-ext-gifs.yml
+++ b/locale/therealsujitk-flarum-ext-gifs.yml
@@ -4,9 +4,14 @@ therealsujitk:
       label: 'Ubaci GIF'
       title: 'Odaberi GIF'
       searchbar: 'Pretraži GIF'
+      search: 'Traži'
       loading: 'Učitavanje...'
       noresults: 'Nema rezultata'
+      loadmore: 'Učitaj više'
   admin:
     gifs:
       title: 'GIF API Settings'
       giphyAPIkey: 'Giphy API Key'
+    about:
+      stringA: 'Extension built by '
+      stringB: 'Donate to me on '
