--- a/locale/the-turk-flarum-diff.yml
+++ b/locale/the-turk-flarum-diff.yml
@@ -1,49 +1,59 @@
 the-turk-diff:
     forum:
-        differences:                Razlike
-        revisionInfo:               "Uređivano {revisionCount} puta, najnovije na vrhu|Uređivano {revisionCount} puta, najnovije na vrhu"
-        emptyText:                  Nema revizija
-        confirmDelete:              Jeste li sigurni da želite izbrisati sadržaj ove izmjene iz historije?
-        confirmRollback:            Jeste li sigurni da želite povratak na ovu reviziju? Sadržaj uređivanja nakon ove revizije trajno će se izbrisati.
-        deleteSuccessMessage:       Sadržaj uređivanja izbrisan je.
-        deleteErrorMessage:         Brisanje sadržaja uređivanja nije uspjelo.
-        rollbackSuccessMessage:     Vaše promjene su vraćene.
-        rollbackErrorMessage:       Vraćanje promjena nije uspjelo.
-        deletedText:                (deleted)
-        deletedTooltip:             "{username} obrisao je ovaj sadržaj {ago}"
-        optionsButton:              Opcije
-        rollbackButton:             Vrati nazad ovu reviziju
-        noDiff:
+        revisionInfo:                "Uređivano {revisionCount} puta, najnovije na vrhu|Uređivano {revisionCount} puta, najnovije na vrhu"
+        revisions:                   "{revisionCount} revizija | {revisionCount} revizije"
+        emptyText:                   Nema revizija
+        confirmDelete:               Jeste li sigurni da želite izbrisati sadržaj ove izmjene iz historije?
+        confirmRollback:             Jeste li sigurni da želite promijeniti svoj trenutni post?
+        deleteSuccessMessage:        Sadržaj uređivanja je izbrisan.
+        deleteErrorMessage:          Brisanje sadržaja uređivanja nije uspjelo.
+        rollbackSuccessMessage:      Vaše promjene su vraćene.
+        rollbackErrorMessage:        Vraćanje promjena nije uspjelo.
+        deletedText:                 (obrisano)
+        deletedTooltip:              "{username} obrisao je ovaj sadržaj {ago}"
+        createdTooltip:              "{username} kreirao {ago}"
+        optionsButton:               Opcije
+        rollbackButton:              "Povrat na reviziju {number}"
+        rollbackToOriginalButton:    Povrati na original
+        revertChangesButton:         Poništi promjene
+        noDiff:                      Nisu pronađene razlike između ova dva sadržaja.
+        mostRecent:                  najnovije
+        sideBySide:                  Jedan pored drugog
+        inline:                      Linija po liniju
+        combined:                    Kombinirano
+
+        # {old}, {new} and {content} may refer to: (=> originalContent) key or (=> revisionWithNumber) key
+        differences:                 "Gledate razlike između {old} i {new}"
+        previewMode:                 "Vi ste u načinu pregleda {content}" # other languages may use: You're in preview mode ({content})
+        originalContent:             izvornog sadržaja # may be {old}, {new} or {content}
+        currentContent:              trenutnog sadržaja # may be {old}, {new} or {content}
+        revisionWithNumber:          "revizija {number}" # may be {old}, {new} or {content}
     admin:
         settings:
-            title:                  Diff Postavke
-            displayMode:            Display Mode (HTML)
-            customHTML:             Prilagođeni prikaz bez brojeva linija
-            tabularHTML:            Tabelarni prikaz s brojevima linija
-            renderMode:             Render Mod
-            inline:                 Line by Line (HTML)
-            sideBySide:             Side by Side (HTML)
-            combined:               Kombinirano (HTML)
-            neighborLines:          Susjedne linije
-            neighborLinesHelp:      Navedite broj susjednih linija koje želite prikazati.
-            onlyUnsigned:           Only <strong>unsigned integers</strong> are allowed!
-            usePoint:               Use <strong>point</strong> as decimal seperator for float values.
-            detailLevel:            Detail Level
-            noneLevel:              None-level
-            lineLevel:              Line-level
-            wordLevel:              Word-level
-            charLevel:              Char-level
-            separateBlock:          Show a separator between different diff hunks in HTML renderers
-            enableSyncScroll:       Omogući sinkronizirano pomicanje za bočni render
-            allowSwitch:            Dopustite korisnicima da prelaze između načina prikazivanja
-            mainPostOnly:           Store main post's revisions only
-            dbOptimisation:         Database Optimisation
-            archiveOlds:            Archive old revisions
-            archiveOldsInfo:        If <strong>x ≥ A</strong>, first <strong>y=mx+b</strong> revisions for the post will be stored as merged & compressed. The <strong>x</strong> refers to post's revision count. Float values of <strong>y</strong> will be rounded to the next lowest integer value.
-            useCrons:               Use crons to archive old revisions
-            useCronsHelp:           You must add Cron entry to your server to make this option work. It'll work weekly on sundays at 02:00 AM. If you disable this option and enable above, all of the post's revisions will be scanned for archiving when the related post is revised.
-            archiveInfo:            Keep in mind that you can disable both options and run <code>php flarum diff:archive</code> command to archive old revisions manually.
+            title:                   Diff Settings
+            neighborLines:           Neighbor Lines
+            neighborLinesHelp:       Specify the neighbor line count that you want to show.
+            onlyUnsigned:            Only <strong>unsigned integers</strong> are allowed!
+            usePoint:                Use <strong>point</strong> as decimal seperator for float values.
+            detailLevel:             Detail Level
+            noneLevel:               None-level
+            lineLevel:               Line-level
+            wordLevel:               Word-level
+            charLevel:               Char-level
+            separateBlock:           Show a separator between different diff hunks in HTML renderers
+            mainPostOnly:            Store main post's revisions only
+            textFormatting:          Enable text formatting for previews
+            dbOptimisation:          Database Optimisation
+            archiveOlds:             Archive old revisions
+            archiveOldsInfo:         If <strong>x ≥ A</strong>, first <strong>y=mx+b</strong> revisions for the post will be stored as merged & compressed. The <strong>x</strong> refers to post's revision count. Float values of <strong>y</strong> will be rounded to the next lowest integer value.
+            useCrons:                Use crons to archive old revisions
+            useCronsHelp:            You must add Cron entry to your server to make this option work. It'll work weekly on sundays at 02:00 AM. If you disable this option and enable above, all of the post's revisions will be scanned for archiving when the related post is revised.
+            archiveInfo:             Keep in mind that you can disable both options and run <code>php flarum diff:archive</code> command to archive old revisions manually.
+            mergeThreshold:          Merge Treshold for the Combined Renderer
+            mergeThresholdHelp:      This determines whether a replace-type block should be merged or not depending on the content changed ratio, which values between 0 and 1.
         permissions:
-            viewEditHistory:        Vidjeti historiju uređivanja
-            deleteEditHistory:      Izbrišite druge historije uređivanja
-            selfDeleteEditHistory:  Izbrišite vlastitu historiju uređivanja
+            viewEditHistory:         Pogledati historiju uređivanja
+            deleteEditHistory:       Izbrisati druge historije uređivanja
+            selfDeleteEditHistory:   Izbrisati vlastitu historiju uređivanja
+            rollbackEditHistory:     Povratiti druge historije uređivanja
+            selfRollbackEditHistory: Povratiti vlastite historije uređivanja
