--- a/locale/fof-byobu.yml
+++ b/locale/fof-byobu.yml
@@ -9,6 +9,8 @@ fof-byobu:
             edit_recipients: Uredi sudionike
             send_pd: "Pošalji {username} poruku"
             cancel: Otkaži
+            remove_from_discussion: Napusti ovu privatnu diskusiju
+            make_public: Napravi ovu diskusiju javnu
         composer_private_discussion:
             submit_button: Objavi privatnu diskusiju
             title_placeholder: Naslov privatne diskusije         
@@ -16,7 +18,6 @@ fof-byobu:
             recipients: "{count} primatelj|{count} primatelja"
             user_deleted: -deleted-
         nav:
-            private_discussions: Privatna diskusija
             start_button: Nova privatna diskusija
         input:
             search_recipients: Pretraživanje primatelja upišite prva tri znaka...
@@ -26,15 +27,16 @@ fof-byobu:
         modal:
             titles:
                 update_recipients: Ažurirani sudionici od {title}
-                add_recipients: Dodajte primatelje u svoju raspravu
+                add_recipients: Dodajte primatelje u svoju diskusiju
             help:
-                add_recipients: Ova će rasprava biti vidljiva samo korisnicima koje odaberete ovdje. Potreban je najmanje 1 primatelj (osim sebe)
-                update_recipients: Ova će rasprava biti vidljiva samo korisnicima koje odaberete ovdje.
+                add_recipients: Ova će diskusija biti vidljiva samo korisnicima koje odaberete ovdje. Potreban je najmanje 1 primatelj (osim sebe)
+                update_recipients: Ova će diskusija biti vidljiva samo korisnicima koje odaberete ovdje.
         post:
             recipients_modified:
                 added_and_removed: "{username} je dodao/la sudionika {added} i uklonio/la {removed}."
                 added: "{username} dodao sudionika {added}."
                 removed: "{username} je uklonio/la sudionika {removed}."
+                removed_self: "{username} je napustio/la privatnu diskusiju."
         user:
             settings:
                 block_pd: Blokirajte privatne diskusije
@@ -47,14 +49,22 @@ fof-byobu:
             pd_reply_label: Netko objavljuje u privatnoj diskusiji čiji sam primatelj
             pd_reply_text: "{username} je objavio/la u privatnoj diskusiji čiji ste dio"
             pd_text: "{username} je započeo/la novu privatnu diskusiju s vama"
+            pd_user_left_label: Korisnik primatelj napušta privatnu diskusiju čiji sam učesnik
+            pd_user_left_text: "{username} napusio/la privatnu diskusiju"
+            pd_added_text: "{username} dodao/la vas je u privatnu diskusiju"
+            pd_added_label: "Neko me dodaje u postojeću privatnu diskusiju"
+            
+        confirm:
+            make_public: Time će ova privatna diskusija postati vidljiva svima. Razmislite je li ovo ispravna radnja prije nego što nastavite.
 
     admin:
         permission:
             create_private_discussions_with_users: Stvarajte privatne diskusije s korisnicima
             create_private_discussions_with_groups: Stvorite privatne diskusije s grupama
             create_private_discussions_with_blocking_users: Stvorite privatne diskusije s korisnicima koji su je blokirali
-            edit_user_recipients: Uredite korisnike koji sudjeluju u privatnim raspravama
-            edit_group_recipients: Uređivanje grupa koje sudjeluju u privatnim raspravama
+            edit_user_recipients: Uredite korisnike koji sudjeluju u privatnim diskusijama
+            edit_group_recipients: Uređivanje grupa koje sudjeluju u privatnim diskusijama
+            make_private_into_public: Pretvorite privatnu diskusiju u javnu diskusiju
             view_private_discussions-when-flagged: Pogledajte privatne diskusije drugih korisnika ako su označene
 
         settings:
@@ -66,3 +76,7 @@ fof-byobu:
             title: "[Private Discussion] korisnik je započeo/la s vama novu privatnu diskusiju"
         private_discussion_replied:
             title: "[Private Discussion] korisnik je objavio u privatnoj diskusiji"
+        recipient_removed:
+            title: "[Private Discussion] korisnik je napustio diskusiju"
+        private_discussion_added:
+            title: "[Private Discussion] korisnik vas je dodao u privatnu diskusiju"
