--- a/locale/fof-best-answer.yml
+++ b/locale/fof-best-answer.yml
@@ -18,6 +18,8 @@ fof-best-answer:
     remove_best_answer: Poništi odabir najboljeg odgovora
     best_answer_button: Najbolji odgovor
     best_answer_label: postavljeno od <a>{username}</a>
+    errors:
+      mismatch: "Odabrani post ne postoji u ovoj diskusiji"
 
     notification:
       best_answer_in_discussion: "{username} je u ovoj diskusiji postavio/la najbolji odgovor"
