--- a/locale/fof-reactions.yml
+++ b/locale/fof-reactions.yml
@@ -6,10 +6,14 @@ fof-reactions:
     settings:
         notify_post_reacted_label: Neko reagira na jedan moj post
     reacting-own-post: You cannot react to your own post
+    modal:
+        title: Reakcije
+    mod_item: Pogledaj reakcije
 
   admin:
     permissions:
         react_posts_label: Reagira na postove
+        see_reactions_label: Pogledajte ko je reagirao na postove
 
     nav:
       desc: Dodajte prilagođene reakcije i promijenite postavke.
