--- a/locale/askvortsov-pwa.yml
+++ b/locale/askvortsov-pwa.yml
@@ -32,13 +32,26 @@ askvortsov-pwa:
       possible_https_disabled: Your site might not be running on HTTPS. If it is, ignore this. If it isn't keep in mind that HTTPS is required for Progressive Web Apps to work.
       no_logo: You must upload at least one logo, with a size of at least 192px for your app to work.
       no_name: You must provide a full name for your app to work.
+      push_needs_gmp_and_web_push: The gmp PHP extension and minishlink/web-push library (composer require minishlink/web-push) MUST be enabled for push notifications to work.
       success: No Potential Issues Found!
   forum:
+    alerts:
+      optin: Omogućene su vam push obavijesti, ali niste konfigurirali ovaj uređaj.
+      optin_button: Configure
     discussion_controls:
-      share_button: Share
+      share_button: Podijeli
     post_controls:
-      share_button: Share
+      share_button: Podijeli
       share_api:
-        title: "{username}'s reply to {title}'"
+        title: "{username}' je odgovorio/la na {title}'"
     user_controls:
-      share_button: Share
+      share_button: Podijeli
+    settings:
+      push_header: Push
+      pwa_notifications:
+        access_default: Zbog ograničena browsera, morate uključiti primanje obavijesti na ovom uređaju.
+        access_default_button: Uključi
+        access_denied: Morate prilagoditi postavke preglednika da biste primali push obavijesti na ovom uređaju.
+        access_denied_button: Nauči kako
+        no_browser_support: Ovaj preglednik ne podržava push obavijesti za progresivne web aplikacije.
+        no_browser_support_button: Saznajte više
